--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
-          <a class="logo" href="webstudio.html" class="header-nav-logo">
+          <a  href="#" class="header-nav-logo">
             web<span class="logo-studio">Studio</span></a
           >
           <ul class="header-nav-ul">
@@ -50,7 +50,7 @@
     <!--Main section-->
     <main>
       <!--Main-Section-1-->
-      <section class="main-section-1-hero-image">
+      <section class="hero-image">
         <div class="container">
           <h1 class="hero-image-title">
             Effective Solutions for Your Business
@@ -60,34 +60,34 @@
         </div>
       </section>
       <!--Main-Section-2-->
-      <section class="main-2-section">
+      <section class="feature-section">
         <div class="container">
           <h2 class="visual-hidden">Peculiarities</h2>
-          <ul class="main-section-2-ul">
-            <li class="main-section-2-ul-li">
-              <h3 class="main-section-2-title">Strategy</h3>
-              <p class="main-section-2-text">
+          <ul class="feature-ul">
+            <li class="feature-ul-li">
+              <h3 class="feature-title">Strategy</h3>
+              <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="main-section-2-ul-li">
-              <h3 class="main-section-2-title">Punctuality</h3>
-              <p class="main-section-2-text">
+            <li class="feature-ul-li">
+              <h3 class="feature-title">Punctuality</h3>
+              <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="main-section-2-ul-li">
-              <h3 class="main-section-2-title">Diligence</h3>
-              <p class="main-section-2-text">
+            <li class="feature-ul-li">
+              <h3 class="feature-title">Diligence</h3>
+              <p class="feature-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="main-section-2-ul-li">
-              <h3 class="main-section-2-title">Technologies</h3>
-              <p class="main-section-2-text">
+            <li class="feature-ul-li">
+              <h3 class="feature-title">Technologies</h3>
+              <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -97,15 +97,15 @@
       </section>
       <!--Main-Section-2-->
       <!--Main-Section-3-->
-      <section class="main-3-section">
+      <section class="team-section">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
-          <ul class="main-section-3-ul">
+          <ul class="team-ul">
             <li class="name">
               <img
                 src="images/img(2).jpg"
                 alt="Mark Guerrero images"
-                width="264"
+                width="264px" 
               />
               <div class="name-job">
                 <h3 class="name-title">Mark Guerrero</h3>
@@ -148,11 +148,11 @@
         </div>
       </section>
       <!--Main-Section-4-->
-      <section class="main-4-section">
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
-          <ul class="main-section-4-ul">
-            <li class="main-section-4-ul-li">
+          <ul class="portfolio-ul">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css6.jpg"
                 alt="Banking App images"
@@ -163,7 +163,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="main-section-4-ul-li">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css1.jpg"
                 alt="Cashless Payment İmages"
@@ -175,7 +175,7 @@
               </div>
             </li>
 
-            <li class="main-section-4-ul-li">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css2.jpg"
                 alt="Meditation App İmages"
@@ -187,7 +187,7 @@
               </div>
             </li>
 
-            <li class="main-section-4-ul-li">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css3.jpg"
                 alt="Banking App images"
@@ -199,7 +199,7 @@
               </div>
             </li>
 
-            <li class="main-section-4-ul-li">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css4.jpg"
                 alt="Cashless Payment İmages"
@@ -211,7 +211,7 @@
               </div>
             </li>
 
-            <li class="main-section-4-ul-li">
+            <li class="portfolio-ul-li">
               <img
                 src="./images/css5.jpg"
                 alt="Meditation App İmages"
