--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!--Main-Section-2-->
       <section class="feature-section">
         <div class="container">
-          <h2 class="visual-hidden">Peculiarities</h2>
+          <h2 class="visually-hidden">Peculiarities</h2>
           <ul class="feature-ul">
             <li class="feature-ul-li">
               <h3 class="feature-title">Strategy</h3>
@@ -105,7 +105,7 @@
               <img
                 src="images/img(2).jpg"
                 alt="Mark Guerrero images"
-                width="264px" 
+                width="264" 
               />
               <div class="name-job">
                 <h3 class="name-title">Mark Guerrero</h3>
@@ -156,7 +156,7 @@
               <img
                 src="./images/css6.jpg"
                 alt="Banking App images"
-                width="360"
+                width="360" 
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Banking App</h3>
