--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
       </section>
       <!--Main-Section-4-->
       <section class="portfolio-section">
-        <div class="container">
-          <h2 class="our-portfolio">Our Portfolio</h2>
+       <div class="container">
+        <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-ul">
             <li class="portfolio-ul-li">
               <img
                 src="./images/css6.jpg"
-                alt="Banking App images"
-                width="360" 
+                alt="Banking App images" 
+                height="300" 
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Banking App</h3>
@@ -167,7 +167,7 @@
               <img
                 src="./images/css1.jpg"
                 alt="Cashless Payment İmages"
-                width="360"
+               height="300"
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Cashless Payment</h3>
@@ -179,7 +179,7 @@
               <img
                 src="./images/css2.jpg"
                 alt="Meditation App İmages"
-                width="360"
+                height="300"
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Meditation App</h3>
@@ -191,7 +191,7 @@
               <img
                 src="./images/css3.jpg"
                 alt="Banking App images"
-                width="360"
+                height="300"
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Taxi Service</h3>
@@ -203,7 +203,7 @@
               <img
                 src="./images/css4.jpg"
                 alt="Cashless Payment İmages"
-                width="360"
+                height="300"
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
@@ -215,7 +215,7 @@
               <img
                 src="./images/css5.jpg"
                 alt="Meditation App İmages"
-                width="360" 
+                height="300"
               />
               <div class="app-category">
                 <h3 class="portfolio-title">Online Courses</h3>
